--- a/index.ipynb
+++ b/index.ipynb
@@ -514,7 +514,7 @@
     "index = 0\n",
     "for city_pop in cities:\n",
     "    index += 1\n",
-    "    x = cities[0:12: 2] \n",
+    "    x = cities[0:12, 2] \n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
