--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "index = 0\n",
     "for city_pop in cities:\n",
     "    index += 1\n",
-    "    city_popul = \n",
+    "    city_popul = cities['']\n",
     "    x = cities[0:12][\"Population\"]\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
