--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
     "index = 0\n",
     "for city_pop in cities:\n",
     "    index += 1\n",
-    "    x = cities[0]['Population']\n",
+    "    x = cities[0 + index]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
