--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "for city_pop in cities:\n",
     "    index += 1\n",
     "    x = cities[0]+index\n",
-    "    y = x + cities[0]\n",
+    "    y = x + cities[0]['population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
