--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "index = 0\n",
     "for city_pop in cities:\n",
     "    index += 1\n",
-    "    x = cities[0]+i\n",
+    "    x = cities[0]+index\n",
     "    city_populations.append(y)\n",
     "city_populations\n",
     "    "
