--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in cities:\n",
+    "for city_pop in range(0,lencities:\n",
     "    index += 1\n",
     "    x = cities[0]\n",
     "    city_populations.append(x)\n",
