--- a/index.ipynb
+++ b/index.ipynb
@@ -280,63 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758}]"
+       "[2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +310,7 @@
     "index = 0\n",
     "for city_pop in range(0,len(cities)):\n",
     "    index += 1\n",
-    "    x = cities[0]\n",
+    "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
