--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in range(0,len(cities)):\n",
+    "for city_pop in list(range(0,len(cities))):\n",
     "    index += 1\n",
     "    x = cities[0:12]['Population']\n",
     "    city_populations.append(x)\n",
