--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        " 2891000]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in list(range(0,len(cities))):\n",
+    "for city_pop in list(range(index ,len(cities))):\n",
     "    index += 1\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
