--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index = [0,1,2,3,4,5,6,7,8,9,10,11]\n",
+    "index = \n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index += 1\n",
     "    x = cities[0]['Population']\n",
