--- a/index.ipynb
+++ b/index.ipynb
@@ -299,6 +299,7 @@
     "city_populations = []\n",
     "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
+    "    index\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
