--- a/index.ipynb
+++ b/index.ipynb
@@ -298,8 +298,7 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in list(range(index ,len(cities))):\n",
-    "    index\n",
+    "for city_pop in list(range(index + 1 ,len(cities))):\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
