--- a/index.ipynb
+++ b/index.ipynb
@@ -305,8 +305,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index = 0\n",
-    "for city_pop in list(range(index + 2 ,len(cities))):\n",
+    "index = +\n",
+    "for city_pop in list(range(index ,len(cities))):\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
