--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -298,14 +298,14 @@
        " 2891000]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city_populations = []\n",
-    "index = +\n",
+    "index = +2\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
