--- a/index.ipynb
+++ b/index.ipynb
@@ -305,8 +305,9 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index = +2\n",
+    "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
+    "    index +=1\n",
     "    x = cities[0]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
