--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
     "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index +=1\n",
-    "    x = str(f'')\n",
+    "    x = str(f'{cities[]}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
