--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,8 @@
     "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index +=1\n",
-    "    x = str(f'{cities[0][\"Population]}')\n",
+    "    \n",
+    "    x = str(f'{}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
