--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,8 @@
     "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index +=1\n",
-    "    population = cities[0]['Population']\n",
-    "    x = str(f'{}')\n",
+    "    population = index + cities[0]['Population']\n",
+    "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
