--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        " '2891012']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,9 +308,9 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in list(range(index ,len(cities))):\n",
+    "for city_pop in list(range(index + index ,len(cities))):\n",
     "    index +=1\n",
-    "    population = index + cities[0]['Population']\n",
+    "    population = indexcities[0]['Population']\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
