--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
     "index = 0\n",
     "for city_pop in list(range(index + index ,len(cities))):\n",
     "    index +=1\n",
-    "    population = cities[]\n",
+    "    population = cities\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
