--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city_pop in list(range(0 ,len(cities[0]))):\n",
+    "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
