--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cities\n",
+    "    population = cities[]['Popu']\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
